# Forge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
forge/: __init__.py  cli.py  config.py  diff.py  git_ops.py  test_service.py
forge/adapters/: __init__.py  base.py
forge/adapters/python/: __init__.py  pytest_adapter.py
forge/ai/: __init__.py  base.py  config.py  gemini.py  openai.py  registry.py
forge/backend/: __init__.py  app.py
forge/core/: __init__.py  config.py  diff.py  git_ops.py
forge/database/: __init__.py  models.py  scanner.py  tracker.py
forge/metadata/: __init__.py  branches.py
forge/services/: __init__.py  test_service.py
forge/utils/: __init__.py  ast_parser.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/pages/: BranchDetail.tsx  Dashboard.tsx  RepositoryDetail.tsx  RepositoryList.tsx  TestEvents.tsx
frontend/src/utils/: api.ts
