[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "Opinionated Git workflows with AI-generated tests"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pytest>=7.4.0",
    "rich>=13.0.0",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

